chromeos: fix opacity in ash

The client was not always passing in the right translucent value, leading
to the window being marked opaque on the server when it isn't.

BUG=849380
TEST=none

Change-Id: I39f73a9ede381f0310a8532bc76ce700007f1352
Reviewed-on: https://chromium-review.googlesource.com/1103701
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568149}
Former-commit-id: f049f6e101cada7bdb598e510a1aa1a41f9c5c68